added search bar and updated the nav bar

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -83,10 +83,10 @@
   <!-- Socials -->
   <div class="d-none d-md-flex flex-column align-items-center mt-3 small">
     <ul class="list-unstyled d-flex justify-content-center flex-wrap gap-4 mb-0 align-items-center footer-nav-horizontal">
-      <li><%= link_to "https://www.instagram.com/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-instagram me-2"></i>Instagram<% end %></li>
-      <li><%= link_to "https://www.facebook.com/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-facebook me-2"></i>Facebook<% end %></li>
-      <li><%= link_to "https://www.linkedin.com/in/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-linkedin me-2"></i>LinkedIn<% end %></li>
-      <li><%= link_to "https://twitter.com/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-x-twitter me-2"></i>X<% end %></li>
+      <li><%= link_to "https://www.instagram.com/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-instagram me-2"></i><% end %></li>
+      <li><%= link_to "https://www.facebook.com/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-facebook me-2"></i><% end %></li>
+      <li><%= link_to "https://www.linkedin.com/in/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-linkedin me-2"></i><% end %></li>
+      <li><%= link_to "https://twitter.com/yourprofile", target: "_blank", rel: "noopener", class: "text-light text-decoration-none" do %><i class="fab fa-x-twitter me-2"></i><% end %></li>
     </ul>
   </div>
 
