--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<!-- index.html.erb -->
 <div data-controller="search">
   <%= label_tag :username, "Search by place or friend" %>
   <%= text_field_tag :username, nil, placeholder: "e.g. jordang", data: { search_target: "input" }, autocomplete: "off" %>
