--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,9 +60,9 @@
         <li><%= link_to "Search", users_path, class: "nav-link-inline p-0" %></li>
         <li><%= link_to "My Preferences", onboarding_interests_path , class: "nav-link-inline p-0" %></li>
         <li><hr class="dropdown-divider"></li>
-            <li><%= link_to "Log Out", destroy_user_session_path,
-                    class: "dropdown-item text-style",
-                    data: { turbo_method: :delete } %></li>
+            <%= link_to "Log Out", destroy_user_session_path,
+            class: "btn btn-outline-danger btn-lg rounded-pill archivo mt-5 w-100 fw-600",
+            data: { turbo_method: :delete } %>
       <% else %>
         <%= link_to "Home", root_path, class: "nav-link-inline p-0" %>
         <%= link_to "Log In", new_user_session_path, class: "nav-link-inline p-0" %>
