fix: footer fixed and pdated.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,3 +48,7 @@
 .mapboxgl-popup-content .border-top {
   border-color: #ddd !important;
 }
+
+.footer a.text-light:hover {
+  color: #F2EED7 !important;
+}
