added avatar ft + styling

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -5,6 +5,15 @@
   min-height: 60px;
   border-radius: 90%;
 }
+
+.avatar-small {
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
+  min-height: 40px;
+  border-radius: 90%;
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
