--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column align-items-center bg-white min-vh-100 pt-4 pb-5">
+<div class="d-flex flex-column align-items-center min-vh-100 pt-4 pb-5", style="backgroud-color: #f7f5e8;">
 
   <turbo-frame id="user_profile_<%= @user.id %>" class="w-100">
     <div class="container d-flex flex-column align-items-center" style="max-width: 600px;">
